--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -1,7 +1,39 @@
+/* CSS Variables */
+:root {
+  --branding-color: #ff7f50;
+  --secondary-color: cornsilk;
+  --highlight-color: #d2691e;
+  --muted-color: #a9a9a9;
+  --margin-1: 1px;
+  --margin-2: 5px;
+  --margin-3: 10px;
+  --margin-4: 15px;
+  --margin-5: 20px;
+  --padding-1: 1px;
+  --padding-2: 5px;
+  --padding-3: 10px;
+  --padding-4: 15px;
+  --padding-5: 20px;
+  --font-size-sm: 12px;
+  --font-size-md: 16px;
+  --font-size-lg: 20px;
+  --font-size-xl: 30px;
+  --font-size-2xl: 50px;
+  --font-size-3xl: 100px;
+}
+
+.introduction {
+  background: var(--secondary-color);
+  padding: var(--padding-5);
+}
+
+.introduction h1 {
+  color: var(--branding-color);
+  font-size: var(--font-size-3xl);
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
-
-/* Start coding here */
