style: enhance introduction section and update h1 styling

--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -5,3 +5,14 @@
 }
 
 /* Start coding here */
+.introduction {
+  background-color: cornsilk;
+  padding: 20px;
+}
+
+h1 {
+  color: #ff7f50;
+  font-size: 100px;
+}
+
+
